--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ Con el paso de los años, la Parroquia de Cristo Rey se ha convertido en un refe
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Llamanos</h3>
-                <p>+52 8134779998</p>
+                <p>+52 8134747584</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -509,7 +509,7 @@ Con el paso de los años, la Parroquia de Cristo Rey se ha convertido en un refe
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email</h3>
-                <p>proyectos@fantazylabz.tech</p>
+                <p>info@parroquiacristorey.com</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -567,8 +567,8 @@ Con el paso de los años, la Parroquia de Cristo Rey se ha convertido en un refe
             <div class="footer-contact pt-3">
               <p>Cobalto 1421, Pedregal del Topo Chico, 66061 Cdad. Gral. Escobedo, N.L.</p>
             
-              <p class="mt-3"><strong>Phone:</strong> <span>+52 8134779998</span></p>
-              <p><strong>Email:</strong> <span>proyectos@fantazylabz.tech</span></p>
+              <p class="mt-3"><strong>Phone:</strong> <span>+52 8134747584</span></p>
+              <p><strong>Email:</strong> <span>info@parroquiacristorey.com</span></p>
             </div>
             <div class="social-links d-flex mt-4">
               <!--<a href=""><i class="bi bi-twitter-x"></i></a>-->
@@ -582,24 +582,14 @@ Con el paso de los años, la Parroquia de Cristo Rey se ha convertido en un refe
             <h4>Nuestro Sitio</h4>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="index#hero"> Inicio</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="index#about"> Nuestra Empresa</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="index#services"> Servicios</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="index#portafolio"> Portafolio</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="index#contact"> Contactanos</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="index#about"> Servicios</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="index#services"> Grupos Parroquiales</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="index#portafolio"> Celebraciones Eucristicas</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="index#contact"> Contáctanos</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Servicios</h4>
-            <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="service-details-desarrolloweb.html"> Desarrollo Web</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="service-details-desarrolloapps.html"> Desarrollo de Aplicaciones</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="service-details-basedatos.html"> Gestion de Bases de Datos</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="service-details-disenouiux.html"> Diseño UI/UX</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="service-details-desarrollomvp.html"> Desarrollo de MVP`s</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="service-details-desarrolloarquitectura.html"> Arquitectura de Software</a></li>
-            </ul>
-          </div>
+          
 
           <div class="col-lg-4 col-md-12 footer-newsletter">
             <h4>Nuestro Blog</h4>
