--- a/index.html
+++ b/index.html
@@ -540,7 +540,10 @@ Con el paso de los años, la Parroquia de Cristo Rey se ha convertido en un refe
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
 
-                  <button type="submit">Enviar Mensaje</button>
+                 <button type="submit" style=" background-color: green; color: white; border: none;">
+    Enviar Mensaje
+</button>
+
                 </div>
 
               </div>
