cambio de color de logo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  <header id="header" class="header d-flex align-items-center fixed-top">
   <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
     <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
-      <img src="logo.png" alt="">
+      <img src="logo.jpg" alt="">
     </a>
     <nav id="navmenu" class="navmenu">
       <ul>
@@ -392,7 +392,6 @@
             <li class="list-item">Escuela de Pastoral</li>
             <li class="list-item">Escuela Bíblica Arquidiocesana</li>
             <li class="list-item">Liturgia</li>
-            <li class="list-item">MCM</li>
             <li class="list-item">Monaguillos</li>
             <li class="list-item">Pequeños Hermanos de María</li>
             <li class="list-item">Mision Católica Matrimonial</li>
