--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  <header id="header" class="header d-flex align-items-center fixed-top">
   <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
     <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
-      <img src="logo.jpg" alt="">
+      <img src="logo (2).png" alt="">
     </a>
     <nav id="navmenu" class="navmenu">
       <ul>
@@ -526,7 +526,7 @@ Gral. Escobedo, N.L.</p>
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Llamanos</h3>
-                <p>+52 8134747584</p>
+                <p>+528183848009</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -598,7 +598,7 @@ Col. Pedregal del Topochico
 CP 66061
 Gral. Escobedo, N.L.</p>
             
-              <p class="mt-3"><strong>Phone:</strong> <span>+52 8134747584</span></p>
+              <p class="mt-3"><strong>Phone:</strong> <span>+528183848009</span></p>
               <p><strong>Email:</strong> <span>info@parroquiacristorey.com</span></p>
             </div>
             <div class="social-links d-flex mt-4">
