--- a/index.html
+++ b/index.html
@@ -534,46 +534,38 @@ Gral. Escobedo, N.L.</p>
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email</h3>
-                <p>info@parroquiacristorey.com</p>
+                <p>administracion@pcristoreyesc.com</p>
               </div>
             </div><!-- End Info Item -->
 
           </div>
 
-          <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" class="php-email-form"  data-aos-delay="200">
-              <div class="row gy-4">
+<div class="col-lg-8">
+    <form action="https://formsubmit.co/administracion@pcristoreyesc.com" method="POST" class="php-email-form" >
+        <!-- Campo oculto para redirigir a la misma página -->
+        <input type="hidden" name="_redirect" value="https://pcristoreyesc.com/">
+        <div class="row gy-4">
+            <div class="col-md-6">
+                <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+            </div>
+            <div class="col-md-6">
+                <input type="email" class="form-control" name="email" placeholder="Your Email" required>
+            </div>
+            <div class="col-md-12">
+                <input type="text" class="form-control" name="subject" placeholder="Subject">
+            </div>
+            <div class="col-md-12">
+                <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
+            </div>
+            <div class="col-md-12 text-center">
+                <button type="submit" style="background-color: green; color: white; border: none;">Enviar Mensaje</button>
+            </div>
+        </div>
+    </form>
+</div>
 
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                </div>
 
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                </div>
 
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                 <button type="submit" style=" background-color: green; color: white; border: none;">
-    Enviar Mensaje
-</button> 
-
-                </div>
-
-              </div>
-            </form>
-          </div><!-- End Contact Form -->
 
         </div>
 
@@ -629,20 +621,7 @@ Gral. Escobedo, N.L.</p>
 
           
 
-          <div class="col-lg-4 col-md-12 footer-newsletter">
-            <h4>Nuestro Blog</h4>
-            <p>¡Suscríbete a nuestro boletín y recibe las últimas noticias sobre nuestros productos y servicios!</p>
-            <form action="forms/newsletter.php" method="post" class="php-email-form">
-              <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Suscribete"></div>
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your subscription request has been sent. Thank you!</div>
-            </form>
-          </div>
-
-        </div>
-      </div>
-    </div>
+          
 
     <div class="copyright">
       <div class="container text-center">
@@ -660,16 +639,6 @@ Gral. Escobedo, N.L.</p>
 
   <!-- Preloader -->
   <div id="preloader"></div>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
